--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.2.1",
     "@react-pdf/renderer": "^1.6.17",
     "@reduxjs/toolkit": "^1.6.1",
@@ -20,14 +22,14 @@
     "jquery": "^3.6.0",
     "mongoose": "^5.13.5",
     "node": "^16.16.0",
-    "node-sass": "^6.0.1",
+    "node-sass": "^7.0.1",
     "react": "^17.0.0",
     "react-body-backgroundcolor": "^1.2.1",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.28.1",
     "react-swiper": "^0.1.5",
     "react-to-print": "^2.13.0",
