--- a/package.json
+++ b/package.json
@@ -1,45 +1,24 @@
 {
-  "name": "accounting",
-  "version": "0.1.0",
+  "name": "teklifyap",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.2.1",
-    "@react-pdf/renderer": "^1.6.17",
     "@reduxjs/toolkit": "^1.6.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "animate.css": "^4.1.1",
-    "aos": "^2.3.4",
-    "axios": "^0.21.1",
-    "body-parser": "^1.19.0",
     "bootstrap": "^5.1.3",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "html2pdf.js": "^0.10.1",
-    "jquery": "^3.6.0",
-    "mongoose": "^5.13.5",
-    "node": "^16.16.0",
-    "node-sass": "^7.0.1",
     "react": "^17.0.0",
-    "react-body-backgroundcolor": "^1.2.1",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-router": "^6.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
-    "react-slick": "^0.28.1",
     "react-swiper": "^0.1.5",
-    "react-to-print": "^2.13.0",
     "react-verification-code-input": "^1.2.9",
     "react-wavify": "^1.5.4",
-    "reactjs-popup": "^2.0.5",
     "redux": "^4.1.1",
-    "resolve-url-loader": "^4.0.0",
-    "sass": "^1.40.1",
-    "slick-carousel": "^1.8.1",
     "swiper": "^6.7.5",
     "web-vitals": "^1.1.2"
   },
